# postmarketos-upgrade-gtk3

./: meson.build
data/: meson.build  org.postmarketos.Upgrade.appdata.xml.in  org.postmarketos.Upgrade.desktop.in  org.postmarketos.Upgrade.gschema.xml  upgrade-message
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  postmarketos_upgrade-window.c  postmarketos_upgrade-window.h  postmarketos_upgrade-window.ui  postmarketos_upgrade.gresource.xml
